Fix alignment of button icons in chrome

--- a/client/src/IconButton.css
+++ b/client/src/IconButton.css
@@ -1,6 +1,7 @@
 .IconButton {
   display: flex;
   justify-content: center;
+  align-items: center;
   background: none;
   border: none;
 }
